# ChangeLog for dev-ruby/stomp
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/stomp/ChangeLog,v 1.15 2012/10/01 13:56:03 johu Exp $

  01 Oct 2012; Johannes Huber <johu@gentoo.org> stomp-1.2.5.ebuild:
  Stable for x86, wrt bug #436554

  01 Oct 2012; Agostino Sarubbo <ago@gentoo.org> stomp-1.2.5.ebuild:
  Stable for amd64, wrt bug #436554

  23 Sep 2012; Hans de Graaff <graaff@gentoo.org> -stomp-1.2.2.ebuild,
  -stomp-1.2.4.ebuild:
  Cleanup.

*stomp-1.2.5 (13 Aug 2012)

  13 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> +stomp-1.2.5.ebuild:
  Version bump.

*stomp-1.2.4 (05 Jul 2012)

  05 Jul 2012; Diego E. Pettenò <flameeyes@gentoo.org> +stomp-1.2.4.ebuild,
  -stomp-1.2.0.ebuild, stomp-1.2.2.ebuild:
  Version bump; use the new rspec support in 1.2.2 as well; remove 1.2.0.

*stomp-1.2.2 (21 Apr 2012)

  21 Apr 2012; Hans de Graaff <graaff@gentoo.org> +stomp-1.2.2.ebuild:
  Version bump.

  21 Apr 2012; Hans de Graaff <graaff@gentoo.org> -stomp-1.1.8.ebuild,
  -stomp-1.1.9.ebuild:
  Remove old versions.

*stomp-1.2.0 (25 Dec 2011)

  25 Dec 2011; Hans de Graaff <graaff@gentoo.org> +stomp-1.2.0.ebuild:
  Version bump.

  19 Sep 2011; Markus Meier <maekke@gentoo.org> stomp-1.1.7.ebuild:
  x86 stable, bug #368825

  07 Aug 2011; Markos Chandras <hwoarang@gentoo.org> stomp-1.1.7.ebuild:
  Stable on amd64 wrt bug #368825

*stomp-1.1.9 (17 Jun 2011)

  17 Jun 2011; Hans de Graaff <graaff@gentoo.org> +stomp-1.1.9.ebuild:
  Version bump.

  31 May 2011; Hans de Graaff <graaff@gentoo.org> stomp-1.1.7.ebuild,
  stomp-1.1.8.ebuild:
  Depend on the right version of rspec, fixes bug 368907.

  27 May 2011; Hans de Graaff <graaff@gentoo.org> stomp-1.1.7.ebuild:
  Drop ruby19 to create a stable candidate for bug 368825.

*stomp-1.1.8 (18 Mar 2011)

  18 Mar 2011; Hans de Graaff <graaff@gentoo.org> +stomp-1.1.8.ebuild:
  Version bump.

*stomp-1.1.7 (28 Feb 2011)
