@@ -1,0 +1,22 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/stomp/Attic/stomp-1.2.6.ebuild,v 1.1 2012/10/16 09:52:17 graaff Exp $
+
+EAPI=4
+
+USE_RUBY="ruby18 ruby19 ree18"
+
+RUBY_FAKEGEM_DOCDIR="doc"
+RUBY_FAKEGEM_EXTRADOC="CHANGELOG.rdoc README.rdoc"
+
+RUBY_FAKEGEM_RECIPE_TEST="rspec"
+
+inherit ruby-fakegem
+
+DESCRIPTION="Ruby bindings for the stomp messaging protocol"
+HOMEPAGE="http://rubyforge.org/projects/stomp/"
+
+LICENSE="Apache-2.0"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
