@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/stomp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/stomp/ChangeLog,v 1.15 2012/10/01 13:56:03 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/stomp/ChangeLog,v 1.16 2012/10/16 09:52:17 graaff Exp $
+
+*stomp-1.2.6 (16 Oct 2012)
+
+  16 Oct 2012; Hans de Graaff <graaff@gentoo.org> +stomp-1.2.6.ebuild:
+  Version bump.
 
   01 Oct 2012; Johannes Huber <johu@gentoo.org> stomp-1.2.5.ebuild:
   Stable for x86, wrt bug #436554
